# directx-framework

./: .gitignore  CMakeLists.txt
resources/shaders/: ps.hlsl  vs.hlsl
src/: Application.cpp  Application.h  Direct3DEnvironment.cpp  Direct3DEnvironment.h  GameTimer.cpp  GameTimer.h  Shader.cpp  Shader.h  TriangleApp.cpp  TriangleApp.h  WaveFrontReader.h  Window.cpp  Window.h  main.cpp
